--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.19.0",
+    "@prisma/client": "^6.15.0",
+    "better-auth": "^1.3.8",
     "hono": "^4.9.6"
   },
   "devDependencies": {
-    "@types/node": "^20.11.17",
+    "@types/node": "^24.3.1",
+    "prisma": "^6.15.0",
     "tsx": "^4.7.1",
     "typescript": "^5.8.3"
   }
