--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@hono/node-server": "^1.19.0",
     "@prisma/client": "^6.15.0",
     "better-auth": "^1.3.8",
-    "hono": "^4.9.6"
+    "hono": "^4.9.6",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@types/node": "^24.3.1",
