--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@hono/node-server": "^1.19.0",
     "@prisma/client": "^6.15.0",
     "better-auth": "^1.3.8",
+    "dotenv": "^17.2.2",
     "hono": "^4.9.6",
     "zod": "^4.1.5"
   },
@@ -18,5 +19,19 @@
     "prisma": "^6.15.0",
     "tsx": "^4.7.1",
     "typescript": "^5.8.3"
-  }
+  },
+  "version": "1.0.0",
+  "description": "```\r npm install\r npm run dev\r ```",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/boon4681/quizily-backend.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/boon4681/quizily-backend/issues"
+  },
+  "homepage": "https://github.com/boon4681/quizily-backend#readme"
 }
