--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "@google/genai": "^1.20.0",
     "@hono/node-server": "^1.19.0",
     "@prisma/client": "^6.15.0",
     "better-auth": "^1.3.8",
