--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "@hono/node-server": "^1.19.0",
     "@prisma/client": "^6.15.0",
     "better-auth": "^1.3.8",
     "hono": "^4.9.6",
+    "pdf-parse": "^1.1.1",
     "zod": "^4.1.5"
   },
   "devDependencies": {
     "@types/node": "^24.3.1",
+    "@types/pdf-parse": "^1.1.5",
     "prisma": "^6.15.0",
     "tsx": "^4.7.1",
     "typescript": "^5.8.3"
