--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "better-auth": "^1.3.8",
     "dotenv": "^17.2.2",
     "hono": "^4.9.6",
+    "nanoid": "^5.1.6",
     "zod": "^4.1.5"
   },
   "devDependencies": {
