--- a/package.json
+++ b/package.json
@@ -7,10 +7,16 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "@google/genai": "^1.21.0",
     "@hono/node-server": "^1.19.0",
+    "@hono/zod-validator": "^0.7.3",
+    "@paralleldrive/cuid2": "^3.0.4",
     "@prisma/client": "^6.15.0",
     "better-auth": "^1.3.8",
+    "dotenv": "^17.2.2",
     "hono": "^4.9.6",
+    "p-queue": "^9.0.0",
+    "typebox": "^1.0.44",
     "zod": "^4.1.5"
   },
   "devDependencies": {
